
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int strlen (char*) ;

void check(char *ptr){
    int i;

    for(i = 0; i < strlen(ptr); i++){
        switch(ptr[i]){
            case '\x00':
                ptr[i] = 0x01;
                break;
            case '\x09':
                ptr[i] = 0x08;
                break;
            case '\x0a':
                ptr[i] = 0x0e;
                break;
            case '\x0b':
                ptr[i] = 0x0e;
                break;
            case '\x0c':
                ptr[i] = 0x0e;
                break;
            case '\x0d':
                ptr[i] = 0x0e;
                break;
            case '\x20':
                ptr[i] = 0x21;
                break;
            case '\x22':
                ptr[i] = 0x23;
                break;
            case '\x28':
                ptr[i] = 0x27;
                break;
            case '\x29':
                ptr[i] = 0x30;
                break;
        }
    }
}
